<?xml version="1.0" encoding="utf-8"?>
<!-- Layout for the editor -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditorActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">
        <!-- Book Info category -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <!-- Label -->
            <TextView
                style="@style/CategoryStyle"
                android:text="@string/category_book" />
            <!-- Input fields -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:orientation="vertical"
                android:paddingLeft="16dp">
                <!-- Title field -->
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <EditText
                        android:id="@+id/edit_book_title"
                        style="@style/EditorFieldStyle"
                        android:hint="@string/hint_book_title"
                        android:inputType="textCapWords" />
                </android.support.design.widget.TextInputLayout>
                <!-- Author field -->
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <EditText
                        android:id="@+id/edit_book_author"
                        style="@style/EditorFieldStyle"
                        android:hint="@string/hint_book_author"
                        android:inputType="textCapWords" />
                </android.support.design.widget.TextInputLayout>
                <!-- Price field -->
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/edit_price"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <EditText
                            android:id="@+id/edit_book_price"
                            style="@style/EditorFieldStyle"
                            android:hint="@string/hint_book_price"
                            android:inputType="numberDecimal" />
                    </android.support.design.widget.TextInputLayout>

                    <TextView
                        android:id="@+id/price_symbol"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:fontFamily="sans-serif-light"
                        android:textAppearance="?android:textAppearanceMedium"
                        android:textColor="@color/editorColorPrimary" />
                </RelativeLayout>
                <!-- Quantity field -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/amount_increase_or_decrease_container"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="2">

                        <EditText
                            android:id="@+id/amount_increase_or_decrease"
                            style="@style/EditorFieldStyle"
                            android:hint="@string/hint_book_quantity_inc_dec_amount"
                            android:inputType="number" />
                    </android.support.design.widget.TextInputLayout>

                    <ImageButton
                        android:id="@+id/quantity_decrease"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:clickable="true"
                        android:focusable="true"
                        android:src="@drawable/ic_minus_sign" />

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="2">

                        <EditText
                            android:id="@+id/edit_book_quantity"
                            style="@style/EditorFieldStyle"
                            android:hint="@string/hint_book_quantity"
                            android:inputType="number" />
                    </android.support.design.widget.TextInputLayout>

                    <ImageButton
                        android:id="@+id/quantity_increase"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:clickable="true"
                        android:focusable="true"
                        android:src="@drawable/ic_plus_symbol" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
        <!-- Supplier Info category -->
        <LinearLayout
            android:id="@+id/container_supplier"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <!-- Label -->
            <TextView
                style="@style/CategoryStyle"
                android:text="@string/category_supplier" />
            <!-- Input fields -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:orientation="vertical"
                android:paddingLeft="16dp">
                <!-- Supplier Name field -->
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <EditText
                        android:id="@+id/edit_book_supplier_name"
                        style="@style/EditorFieldStyle"
                        android:hint="@string/hint_book_supplier_name"
                        android:inputType="textCapWords" />
                </android.support.design.widget.TextInputLayout>
                <!-- Supplier Phone Number field -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="3">

                        <EditText
                            android:id="@+id/edit_book_supplier_phone"
                            style="@style/EditorFieldStyle"
                            android:hint="@string/hint_book_supplier_phone"
                            android:inputType="phone" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.FloatingActionButton
                        android:id="@+id/fab_order_from_supplier"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_weight="1"
                        android:src="@drawable/ic_customer_service" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>